Fix so footer doesn't cause unnecessary scrollbar

--- a/MvcMusicStore/Content/Site.css
+++ b/MvcMusicStore/Content/Site.css
@@ -886,6 +886,10 @@ div#album-details p {
     background-image: none;
 }
 
+footer {
+    height: inherit;
+}
+
 .button, input[type=submit] {
     margin-top: 10px;
     display: inline-block;
